--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="examples">
-      <h1>Panhandler</h1>
+      <h1>Pannable</h1>
       <section>
         <h3>Tile Grid</h3>
         <div ng-app="pannableExamples">
@@ -18,9 +18,11 @@
             <label for="preventPan">Prevent Panning</label>
             <input name="preventPanItem" type="checkbox" ng-model="preventPanItem" />
             <label for="preventPanItem">Prevent Panning on items</label>
-            <div class="grid" panhandler content-width="100em" prevent-pan="{{preventPan}}" panhandler-offset-x="-20em" panhandler-offset-y="-10em">
-              <div class="grid-block" ng-class="{iCannotScroll: preventPanItem==true}" ng-repeat="item in gridItems">
-                <span class="grid-number" ng-cloak panhandler>{{$index + 1}}</span>
+            <div class="container">
+              <div class="grid" pannable pannable-content-width="100em" pannable-content-height="100em" pannable-prevent-pan="{{preventPan}}" pannable-offset-x="-20em" pannable-offset-y="-10em">
+                <div class="grid-block" ng-cloak ng-class="{iCannotScroll: preventPanItem==true}" ng-repeat="item in gridItems">
+                  <span class="grid-number" ng-cloak>{{$index + 1}}</span>
+                </div>
               </div>
             </div>
           </div>
@@ -28,7 +30,7 @@
       </section>
     </div>
     <script src="/js/dependencies.js"></script>
-    <script src="/js/angular-panhandler.js"></script>
+    <script src="/js/angular-pannable.js"></script>
     <script src="/examples.js"></script>
   </body>
 </html>
