--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Angular Panhandler</title>
+      <title>Angular Pannable</title>
       <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <section class="hero">
-      <h1>Panhandler</h1>
+      <h1>Pannable</h1>
       <small>for Angular</small>
     </section>
   </body>
